<resources>
    <string name="app_name">Formulario 1</string>

    <!-- BUTTON -->
    <string name="btnText">Consultar</string>

    <!-- TEXTVIEW -->
    <string name="instructions">Ingresa los siguientes datos</string>
    <string name="splashTitle">Proyecto 1</string>

    <!-- HINT VALUES -->
    <string name="namesHint">Nombre</string>
    <string name="surnameHint">Apellidos</string>
    <string name="dateHint">Fecha de Nacimiento</string>
    <string name="mailHint">Correo Electrónico</string>
    <string name="accountNumberHint">Número de Cuenta</string>

    <!-- TOAST -->
    <string name="toastName">Debe ingresar el nombre</string>
    <string name="toastSurname">Debe ingresar los apellidos</string>
    <string name="toastDate">Debe ingresar la fecha de nacimiento</string>
    <string name="toastMail">Debe ingresar un correo</string>
    <string name="toastInvalidMail">El correo ingresado no es válido</string>
    <string name="toastInvalidaNumber">Debe ingresar un número de cuenta</string>
    <string name="toastInvalidaNumber2">El número de cuenta debe ser de 9 dígitos</string>
    <string name="toastInvalidCareer">Seleccione una carrera (Clic aquí)</string>

    <!-- STATIC -->
    <string name="author" translatable="false">Reyes González Agustín Óscar</string>
    <string name="version">Versión 1.0.0</string>

    <!-- Placeholders -->
    <!--<string name="placeholders">El valor uno es: %1$d y el valor dos es: %2$s</string>-->

    <!-- SPINNERS -->
    <string name="sp_td">Selecciona tu carrera</string>

    <!-- CAREERS -->
    <string-array name="careers">
        <item>Selecciona tu carrera</item>
        <item>Aeroespacial</item>
        <item>Civil</item>
        <item>Geomática</item>
        <item>Ambiental</item>
        <item>Geofísica</item>
        <item>Geológica</item>
        <item>Petrolera</item>
        <item>De Minas y Metalurgia</item>
        <item>En Computación</item>
        <item>Eléctrica Electrónica</item>
        <item>En Telecomunicaciones</item>
        <item>Mecánica</item>
        <item>Industrial</item>
        <item>Mecatrónica</item>
        <item>En Sistemas Biomédicos</item>
    </string-array>

    <!-- MESSAGE ERROR -->
    <string name="emptyInputName">Valor requerido</string>
    <string name="emptyInputSurname">Valor requerido</string>
    <string name="emptyInputDate">Valor requerido</string>
    <string name="emptyInputMail">Valor requerido</string>
    <string name="emptyInputaNumber">Valor requerido</string>
    <string name="mailError">Correo no válido</string>
    <string name="aNumberError">En número de cuenta debe se de 9 dígitos</string>
    
    
    <!-- SIGNOS ZODIACALES -->
    <string name="aries">Aries</string>
    <string name="tauro">Tauro</string>
    <string name="geminis">Géminis</string>
    <string name="cancer">Cáncer</string>
    <string name="leo">Leo</string>
    <string name="virgo">Virgo</string>
    <string name="libra">Libra</string>
    <string name="escorpio">Escorpio</string>
    <string name="sagitario">Sagitario</string>
    <string name="capricornio">Capricornio</string>
    <string name="acuario">Acuario</string>
    <string name="piscis">Piscis</string>

    <!-- SIGNOS CHINOS -->
    <string name="rat">Rata</string>
    <string name="ox">Buey</string>
    <string name="tiger">Tigre</string>
    <string name="rabbit">Conejo</string>
    <string name="dragon">Dragón</string>
    <string name="snake">Serpiente</string>
    <string name="horse">Caballo</string>
    <string name="goat">Cabra</string>
    <string name="bun">Mono</string>
    <string name="rooster">Gallo</string>
    <string name="dog">Perro</string>
    <string name="pig">Cerdo</string>
    <string name="stranger">Desconocido</string>

    <!-- RESULTADOS -->
    <string name="resultsTitle">Resultados</string>
    <string name="nameResults">Nombre Completo</string>
    <string name="ageResults">Edad</string>
    <string name="zodiacalSign">Signo Zodiacal</string>
    <string name="chineseSign">Signo Chino</string>
    <string name="mail">Correo Registrado</string>
    <string name="resultsaNumber">Número de Cuenta</string>
    <string name="ageR">%d años cumplidos</string>



</resources>