<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cheaps3"
    tools:context=".results">

    <TextView
        android:id="@+id/tvResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultsTitle"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textSize="@dimen/letterSizeTitle2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/nameResults"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@color/my_red"
        android:backgroundTint="@color/my_blue"
        android:text="@string/nameResults"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/letterSizeTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.202" />

    <TextView
        android:id="@+id/nameResultsR"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/letterSizeTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameResults"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ageResults"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@color/my_red"
        android:backgroundTint="@color/my_blue"
        android:text="@string/ageResults"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/letterSizeTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameResultsR"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ageResultsR"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/letterSizeTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageResults"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/zodiacalSign"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@color/my_red"
        android:backgroundTint="@color/my_blue"
        android:text="@string/zodiacalSign"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/letterSizeTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageResultsR"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/zodiacalSignR"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/letterSizeTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zodiacalSign"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/chineseSign"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@color/my_red"
        android:backgroundTint="@color/my_blue"
        android:text="@string/chineseSign"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/letterSizeTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zodiacalSignR"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/chineseSignR"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/letterSizeTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chineseSign"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/mail"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@color/my_red"
        android:backgroundTint="@color/my_blue"
        android:text="@string/mail"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/letterSizeTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chineseSignR"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/mailR"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/letterSizeTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/aNumber"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@color/my_red"
        android:backgroundTint="@color/my_blue"
        android:text="@string/resultsaNumber"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/letterSizeTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailR"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/aNumberR"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/letterSizeTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aNumber"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="187dp"
        android:layout_height="171dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aNumberR"
        app:layout_constraintVertical_bias="0.317"
        app:srcCompat="@drawable/aeroespacial" />

</androidx.constraintlayout.widget.ConstraintLayout>